New files added - [] Files modified - [EditForm.html,EditForm.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -259,7 +259,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneCXADMIN" title="CX Admin">
+                            <wm-tabpane name="tabpaneCXADMIN" title="CX Admin" accessroles="CXAdmin">
                                 <wm-layoutgrid name="layoutgrid8">
                                     <wm-gridrow name="gridrow26_2">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn58_2" padding="2em unset 1em unset">
